推进客户端与网络抢滩 / advance client and network port
完成 1.12.2 客户端生命周期、相机、输入、路径、控制器、弹窗、远程菜单探测、蓝图幽灵渲染，以及插件/合成网络消息的机械本地化。保留未迁移模块为显式编译前线，并记录第五轮静态树构建结果。

Ports the client lifecycle, camera, input, pathfinding, controller, popups, remote-menu probing, blueprint ghost rendering, and plugin/crafting packets to the 1.12.2 boundary. Unported modules remain visible in the compile frontier, with the fifth static-tree build documented.