@@ -7,16 +7,18 @@ import com.rtsbuilding.rtsbuilding.client.record.RecentEntry;
 import com.rtsbuilding.rtsbuilding.client.record.StorageEntry;
 import com.rtsbuilding.rtsbuilding.network.storage.C2SRtsLinkStoragePayload;
 import com.rtsbuilding.rtsbuilding.network.storage.S2CRtsStoragePagePayload;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.material.Fluid;
-import net.neoforged.neoforge.fluids.FluidStack;
-import net.neoforged.neoforge.fluids.FluidType;
-import net.neoforged.neoforge.fluids.FluidUtil;
+import net.minecraft.item.Item;
+import net.minecraft.item.ItemStack;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.math.BlockPos;
+import net.minecraftforge.fluids.Fluid;
+import net.minecraftforge.fluids.FluidRegistry;
+import net.minecraftforge.fluids.FluidStack;
+import net.minecraftforge.fluids.FluidUtil;
+import net.minecraftforge.fml.common.registry.ForgeRegistries;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -36,7 +38,7 @@ final class StoragePagePayloadDecoder {
         for (int i = 0; i < payload.linkedPositions().size(); i++) {
             Long packed = payload.linkedPositions().get(i);
             if (packed == null) continue;
-            BlockPos pos = BlockPos.of(packed.longValue());
+            BlockPos pos = BlockPos.fromLong(packed.longValue());
             positions.add(pos);
             linked.add(decodeLinked(payload, i, pos, fallbackLinkedName));
         }
@@ -46,9 +48,11 @@ final class StoragePagePayloadDecoder {
         for (int i = 0; i < itemSize; i++) {
             ItemStack stack = payload.itemStacks().get(i);
             if (stack == null || stack.isEmpty()) continue;
-            ItemStack preview = stack.copyWithCount(1);
-            ResourceLocation id = BuiltInRegistries.ITEM.getKey(preview.getItem());
-            if (id != null) items.add(new StorageEntry(preview, id.toString(), payload.counts().get(i), id.getNamespace(), id.getPath()));
+            ItemStack preview = stack.copy();
+            preview.setCount(1);
+            ResourceLocation id = preview.getItem().getRegistryName();
+            if (id != null) items.add(new StorageEntry(preview, id.toString(), payload.counts().get(i),
+                    id.getResourceDomain(), id.getResourcePath()));
         }
 
         Map<String, Long> totals = new LinkedHashMap<>();
@@ -56,8 +60,8 @@ final class StoragePagePayloadDecoder {
             int totalSize = Math.min(payload.totalItemIds().size(), payload.totalItemCounts().size());
             for (int i = 0; i < totalSize; i++) {
                 String itemId = payload.totalItemIds().get(i);
-                ResourceLocation id = ResourceLocation.tryParse(itemId);
-                if (id != null && BuiltInRegistries.ITEM.containsKey(id)) {
+                ResourceLocation id = parseId(itemId);
+                if (id != null && ForgeRegistries.ITEMS.containsKey(id)) {
                     totals.put(itemId, Math.max(0L, payload.totalItemCounts().get(i)));
                 }
             }
@@ -67,12 +71,13 @@ final class StoragePagePayloadDecoder {
         int fluidSize = Math.min(payload.fluidIds().size(), Math.min(payload.fluidAmounts().size(), payload.fluidCapacities().size()));
         for (int i = 0; i < fluidSize; i++) {
             String fluidId = payload.fluidIds().get(i);
-            ResourceLocation id = ResourceLocation.tryParse(fluidId);
-            if (id == null || !BuiltInRegistries.FLUID.containsKey(id)) continue;
-            Fluid fluid = BuiltInRegistries.FLUID.get(id);
-            FluidStack stack = new FluidStack(fluid, FluidType.BUCKET_VOLUME);
-            fluids.add(new FluidEntry(fluidId, fluid.getFluidType().getDescription(stack).getString(),
-                    payload.fluidAmounts().get(i), payload.fluidCapacities().get(i), id.getNamespace(), id.getPath(),
+            ResourceLocation id = parseId(fluidId);
+            Fluid fluid = id == null ? null : FluidRegistry.getFluid(fluidId);
+            if (fluid == null) continue;
+            FluidStack stack = new FluidStack(fluid, Fluid.BUCKET_VOLUME);
+            fluids.add(new FluidEntry(fluidId, fluid.getLocalizedName(stack),
+                    payload.fluidAmounts().get(i), payload.fluidCapacities().get(i),
+                    id.getResourceDomain(), id.getResourcePath(),
                     FluidUtil.getFilledBucket(stack)));
         }
 
@@ -89,48 +94,93 @@ final class StoragePagePayloadDecoder {
         int funnelSize = Math.min(payload.funnelBufferItemIds().size(), payload.funnelBufferCounts().size());
         for (int i = 0; i < funnelSize; i++) {
             String itemId = payload.funnelBufferItemIds().get(i);
-            ResourceLocation id = ResourceLocation.tryParse(itemId);
+            ResourceLocation id = parseId(itemId);
             long count = Math.max(0L, payload.funnelBufferCounts().get(i));
-            if (id != null && BuiltInRegistries.ITEM.containsKey(id) && count > 0L) {
-                funnel.add(new FunnelBufferEntry(new ItemStack(BuiltInRegistries.ITEM.get(id)), itemId, count));
+            Item item = id == null ? null : ForgeRegistries.ITEMS.getValue(id);
+            if (item != null && count > 0L) {
+                funnel.add(new FunnelBufferEntry(new ItemStack(item), itemId, count));
             }
         }
-        return new DecodedPage(List.copyOf(positions), List.copyOf(linked), List.copyOf(items), Map.copyOf(totals),
-                List.copyOf(fluids), List.copyOf(recent), List.copyOf(funnel));
+        return new DecodedPage(immutable(positions), immutable(linked), immutable(items),
+                Collections.unmodifiableMap(new LinkedHashMap<String, Long>(totals)), immutable(fluids),
+                immutable(recent), immutable(funnel));
     }
 
     private static LinkedStorageEntry decodeLinked(S2CRtsStoragePagePayload payload, int index, BlockPos pos, String fallbackName) {
         String label = index < payload.linkedNames().size() ? payload.linkedNames().get(index) : fallbackName;
-        if (label == null || label.isBlank()) label = "Linked Storage";
+        if (label == null || label.trim().isEmpty()) label = "Linked Storage";
         byte mode = index < payload.linkedModes().size() ? payload.linkedModes().get(index) : C2SRtsLinkStoragePayload.MODE_BIDIRECTIONAL;
         int priority = index < payload.linkedPriorities().size() ? payload.linkedPriorities().get(index) : 0;
         boolean available = index < payload.linkedWorldAvailable().size() && Boolean.TRUE.equals(payload.linkedWorldAvailable().get(index));
         ItemStack preview = ItemStack.EMPTY;
         String iconId = index < payload.linkedIconItemIds().size() ? payload.linkedIconItemIds().get(index) : "";
-        ResourceLocation iconKey = ResourceLocation.tryParse(iconId);
-        if (iconKey != null && BuiltInRegistries.ITEM.containsKey(iconKey)) preview = new ItemStack(BuiltInRegistries.ITEM.get(iconKey));
+        ResourceLocation iconKey = parseId(iconId);
+        Item icon = iconKey == null ? null : ForgeRegistries.ITEMS.getValue(iconKey);
+        if (icon != null) preview = new ItemStack(icon);
         return new LinkedStorageEntry(pos, label, mode, priority, preview, available);
     }
 
     private static RecentEntry decodeRecent(String idText, long amount, long capacity, byte kind) {
-        ResourceLocation id = idText == null ? null : ResourceLocation.tryParse(idText);
+        ResourceLocation id = parseId(idText);
         if (id == null) return null;
         boolean fluidKind = kind == S2CRtsStoragePagePayload.RECENT_FLUID_PLACED
                 || kind == S2CRtsStoragePagePayload.RECENT_FLUID_USED
                 || kind == S2CRtsStoragePagePayload.RECENT_FLUID_CRAFTED;
         if (fluidKind) {
-            if (!BuiltInRegistries.FLUID.containsKey(id)) return null;
-            Fluid fluid = BuiltInRegistries.FLUID.get(id);
-            FluidStack stack = new FluidStack(fluid, FluidType.BUCKET_VOLUME);
-            return new RecentEntry(true, idText, fluid.getFluidType().getDescription(stack).getString(),
+            Fluid fluid = FluidRegistry.getFluid(idText);
+            if (fluid == null) return null;
+            FluidStack stack = new FluidStack(fluid, Fluid.BUCKET_VOLUME);
+            return new RecentEntry(true, idText, fluid.getLocalizedName(stack),
                     Math.max(0L, amount), Math.max(0L, capacity), kind, FluidUtil.getFilledBucket(stack));
         }
-        if (!BuiltInRegistries.ITEM.containsKey(id)) return null;
-        ItemStack preview = new ItemStack(BuiltInRegistries.ITEM.get(id));
-        return new RecentEntry(false, idText, preview.getHoverName().getString(), Math.max(0L, amount), 0L, kind, preview);
+        Item item = ForgeRegistries.ITEMS.getValue(id);
+        if (item == null) return null;
+        ItemStack preview = new ItemStack(item);
+        return new RecentEntry(false, idText, preview.getDisplayName(), Math.max(0L, amount), 0L, kind, preview);
     }
 
-    record DecodedPage(List<BlockPos> positions, List<LinkedStorageEntry> linked, List<StorageEntry> items,
-                       Map<String, Long> totals, List<FluidEntry> fluids, List<RecentEntry> recent,
-                       List<FunnelBufferEntry> funnel) {}
+    private static ResourceLocation parseId(String text) {
+        try {
+            return text == null || text.trim().isEmpty() ? null : new ResourceLocation(text);
+        } catch (RuntimeException invalid) {
+            return null;
+        }
+    }
+
+    private static <T> List<T> immutable(List<T> values) {
+        return Collections.unmodifiableList(new ArrayList<T>(values));
+    }
+
+    /**
+     * 一次储存页解码的不可变结果，保留 record 风格访问器以减少调用方改动。
+     */
+    static final class DecodedPage {
+        private final List<BlockPos> positions;
+        private final List<LinkedStorageEntry> linked;
+        private final List<StorageEntry> items;
+        private final Map<String, Long> totals;
+        private final List<FluidEntry> fluids;
+        private final List<RecentEntry> recent;
+        private final List<FunnelBufferEntry> funnel;
+
+        DecodedPage(List<BlockPos> positions, List<LinkedStorageEntry> linked, List<StorageEntry> items,
+                    Map<String, Long> totals, List<FluidEntry> fluids, List<RecentEntry> recent,
+                    List<FunnelBufferEntry> funnel) {
+            this.positions = positions;
+            this.linked = linked;
+            this.items = items;
+            this.totals = totals;
+            this.fluids = fluids;
+            this.recent = recent;
+            this.funnel = funnel;
+        }
+
+        List<BlockPos> positions() { return this.positions; }
+        List<LinkedStorageEntry> linked() { return this.linked; }
+        List<StorageEntry> items() { return this.items; }
+        Map<String, Long> totals() { return this.totals; }
+        List<FluidEntry> fluids() { return this.fluids; }
+        List<RecentEntry> recent() { return this.recent; }
+        List<FunnelBufferEntry> funnel() { return this.funnel; }
+    }
 }
