@@ -1,28 +1,34 @@
 package com.rtsbuilding.rtsbuilding.client.input.overlay;
 
 import com.rtsbuilding.rtsbuilding.client.controller.ClientRtsController;
+import com.rtsbuilding.rtsbuilding.client.record.CraftableEntry;
+import com.rtsbuilding.rtsbuilding.client.record.StorageEntry;
 import com.rtsbuilding.rtsbuilding.client.screen.standalone.RtsHomeScreen;
 import com.rtsbuilding.rtsbuilding.client.util.RtsClientUiUtil;
 import com.rtsbuilding.rtsbuilding.client.util.RtsCraftablesUiHelper;
 import com.rtsbuilding.rtsbuilding.compat.remote.RtsRemoteMenuCompat;
+import com.rtsbuilding.rtsbuilding.network.RtsPayloadRegistrar;
 import com.rtsbuilding.rtsbuilding.network.craft.C2SRtsCraftRefillPayload;
 import com.rtsbuilding.rtsbuilding.network.storage.C2SRtsImportMenuSlotPayload;
 import com.rtsbuilding.rtsbuilding.network.storage.C2SRtsLinkedPickupPayload;
 import com.rtsbuilding.rtsbuilding.network.storage.C2SRtsLinkedQuickMovePayload;
 import com.rtsbuilding.rtsbuilding.network.storage.C2SRtsReturnCarriedPayload;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.client.gui.screens.inventory.AbstractContainerScreen;
-import net.minecraft.client.gui.screens.inventory.CraftingScreen;
-import net.minecraft.client.gui.screens.inventory.InventoryScreen;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.network.chat.Component;
-import net.minecraft.util.Mth;
-import net.minecraft.world.inventory.CraftingMenu;
-import net.minecraft.world.inventory.Slot;
-import net.minecraft.world.item.ItemStack;
-import net.neoforged.neoforge.network.PacketDistributor;
-import org.lwjgl.glfw.GLFW;
+import net.minecraft.client.gui.FontRenderer;
+import net.minecraft.client.gui.Gui;
+import net.minecraft.client.gui.GuiScreen;
+import net.minecraft.client.gui.inventory.GuiContainer;
+import net.minecraft.client.gui.inventory.GuiCrafting;
+import net.minecraft.client.gui.inventory.GuiInventory;
+import net.minecraft.inventory.ClickType;
+import net.minecraft.inventory.ContainerWorkbench;
+import net.minecraft.inventory.Slot;
+import net.minecraft.item.ItemStack;
+import net.minecraft.client.resources.I18n;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.math.MathHelper;
+import net.minecraftforge.fml.common.registry.ForgeRegistries;
+import org.lwjgl.input.Mouse;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -46,8 +52,8 @@ public final class OverlayInteraction {
         if (!inside(mouseX, mouseY, gridX, gridY, STORAGE_COLS * SLOT_PITCH, storageRows * SLOT_PITCH)) {
             return -1;
         }
-        int col = Mth.floor((mouseX - gridX) / SLOT_PITCH);
-        int row = Mth.floor((mouseY - gridY) / SLOT_PITCH);
+        int col = MathHelper.floor((mouseX - gridX) / SLOT_PITCH);
+        int row = MathHelper.floor((mouseY - gridY) / SLOT_PITCH);
         if (col < 0 || col >= STORAGE_COLS || row < 0 || row >= storageRows) {
             return -1;
         }
@@ -58,7 +64,7 @@ public final class OverlayInteraction {
         if (!inside(mouseX, mouseY, x, y, QUICKBAR_SLOTS * SLOT_PITCH, SLOT_SIZE)) {
             return -1;
         }
-        int col = Mth.floor((mouseX - x) / SLOT_PITCH);
+        int col = MathHelper.floor((mouseX - x) / SLOT_PITCH);
         if (col < 0 || col >= QUICKBAR_SLOTS) {
             return -1;
         }
@@ -70,7 +76,7 @@ public final class OverlayInteraction {
         if (!inside(mouseX, mouseY, x, y, RETURN_SLOTS * SLOT_PITCH, SLOT_SIZE)) {
             return -1;
         }
-        int col = Mth.floor((mouseX - x) / SLOT_PITCH);
+        int col = MathHelper.floor((mouseX - x) / SLOT_PITCH);
         if (col < 0 || col >= RETURN_SLOTS) {
             return -1;
         }
@@ -82,12 +88,12 @@ public final class OverlayInteraction {
         if (layout.craftCollapsed()) {
             return -1;
         }
-        overlayCraftScroll = Mth.clamp(overlayCraftScroll, 0, maxOverlayCraftScroll(ClientRtsController.get(), layout.craftVisibleRows()));
+        overlayCraftScroll = MathHelper.clamp(overlayCraftScroll, 0, maxOverlayCraftScroll(ClientRtsController.get(), layout.craftVisibleRows()));
         if (!inside(mouseX, mouseY, layout.craftPanelX() + 4, layout.craftGridY(), CRAFT_COLS * CRAFT_PITCH, layout.craftVisibleRows() * CRAFT_PITCH)) {
             return -1;
         }
-        int col = Mth.floor((mouseX - (layout.craftPanelX() + 4)) / CRAFT_PITCH);
-        int row = Mth.floor((mouseY - layout.craftGridY()) / CRAFT_PITCH);
+        int col = MathHelper.floor((mouseX - (layout.craftPanelX() + 4)) / CRAFT_PITCH);
+        int row = MathHelper.floor((mouseY - layout.craftGridY()) / CRAFT_PITCH);
         if (col < 0 || col >= CRAFT_COLS || row < 0 || row >= layout.craftVisibleRows()) {
             return -1;
         }
@@ -120,12 +126,12 @@ public final class OverlayInteraction {
         if (index < 0 || index >= ClientRtsController.get().getStorageEntries().size()) {
             return false;
         }
-        Minecraft minecraft = Minecraft.getInstance();
+        Minecraft minecraft = Minecraft.getMinecraft();
         if (minecraft.player == null) {
             return false;
         }
-        var entry = ClientRtsController.get().getStorageEntries().get(index);
-        ItemStack carried = minecraft.player.containerMenu.getCarried();
+        StorageEntry entry = ClientRtsController.get().getStorageEntries().get(index);
+        ItemStack carried = minecraft.player.inventory.getItemStack();
         int wanted = requestedFromCarried(carried, entry.stack(), requestedAmount);
         if (wanted <= 0) {
             return false;
@@ -133,35 +139,35 @@ public final class OverlayInteraction {
         applyLocalCarriedPreview(entry.stack(), wanted);
         ItemStack request = entry.stack().copy();
         request.setCount(1);
-        PacketDistributor.sendToServer(new C2SRtsLinkedPickupPayload(request, wanted));
+        RtsPayloadRegistrar.sendToServer(new C2SRtsLinkedPickupPayload(request, wanted));
         ClientRtsController.get().selectStorageEntry(index);
         pendingOverlayCarriedItemId = entry.itemId();
         return true;
     }
 
     public static boolean tryDepositCarriedToLinked(int requestedAmount) {
-        Minecraft minecraft = Minecraft.getInstance();
+        Minecraft minecraft = Minecraft.getMinecraft();
         if (minecraft.player == null) {
             return false;
         }
-        ItemStack carried = minecraft.player.containerMenu.getCarried();
+        ItemStack carried = minecraft.player.inventory.getItemStack();
         if (carried.isEmpty()) {
             return false;
         }
-        var itemId = BuiltInRegistries.ITEM.getKey(carried.getItem());
+        ResourceLocation itemId = ForgeRegistries.ITEMS.getKey(carried.getItem());
         if (itemId == null) {
             return false;
         }
         int amount = Math.max(1, Math.min(requestedAmount, carried.getCount()));
-        PacketDistributor.sendToServer(new C2SRtsReturnCarriedPayload(itemId.toString(), amount));
+        RtsPayloadRegistrar.sendToServer(new C2SRtsReturnCarriedPayload(itemId.toString(), amount));
         ItemStack preview = carried.copy();
         preview.setCount(amount);
         enqueueReturnPreview(preview);
         carried.shrink(amount);
         if (carried.isEmpty()) {
-            minecraft.player.containerMenu.setCarried(ItemStack.EMPTY);
+            minecraft.player.inventory.setItemStack(ItemStack.EMPTY);
         } else {
-            minecraft.player.containerMenu.setCarried(carried);
+            minecraft.player.inventory.setItemStack(carried);
         }
         pendingOverlayCarriedItemId = "";
         return true;
@@ -172,26 +178,26 @@ public final class OverlayInteraction {
         if (carried.isEmpty()) {
             return Math.min(requested, target.getMaxStackSize());
         }
-        if (!ItemStack.isSameItemSameComponents(carried, target)) {
+        if (!sameItemAndTags(carried, target)) {
             return 0;
         }
         return Math.min(requested, carried.getMaxStackSize() - carried.getCount());
     }
 
     public static void applyLocalCarriedPreview(ItemStack pickedPrototype, int requested) {
-        Minecraft minecraft = Minecraft.getInstance();
+        Minecraft minecraft = Minecraft.getMinecraft();
         if (minecraft.player == null || pickedPrototype.isEmpty()) {
             return;
         }
-        ItemStack carried = minecraft.player.containerMenu.getCarried();
+        ItemStack carried = minecraft.player.inventory.getItemStack();
         int wanted = Math.max(1, requested);
         if (carried.isEmpty()) {
             ItemStack preview = pickedPrototype.copy();
             preview.setCount(Math.min(wanted, preview.getMaxStackSize()));
-            minecraft.player.containerMenu.setCarried(preview);
+            minecraft.player.inventory.setItemStack(preview);
             return;
         }
-        if (!ItemStack.isSameItemSameComponents(carried, pickedPrototype)) {
+        if (!sameItemAndTags(carried, pickedPrototype)) {
             return;
         }
         int grow = Math.min(wanted, carried.getMaxStackSize() - carried.getCount());
@@ -199,33 +205,33 @@ public final class OverlayInteraction {
             return;
         }
         carried.grow(grow);
-        minecraft.player.containerMenu.setCarried(carried);
+        minecraft.player.inventory.setItemStack(carried);
     }
 
     // =========================================================================
     //  Menu slot import & shift drag
     // =========================================================================
 
-    public static int resolveHoveredMenuSlot(AbstractContainerScreen<?> screen, double mouseX, double mouseY) {
-        if (screen == null || screen.getMenu() == null) {
+    public static int resolveHoveredMenuSlot(GuiContainer screen, double mouseX, double mouseY) {
+        if (screen == null || screen.inventorySlots == null) {
             return -1;
         }
         Slot hovered = screen.getSlotUnderMouse();
-        if (hovered != null && hovered.hasItem()) {
-            return screen.getMenu().slots.indexOf(hovered);
+        if (hovered != null && hovered.getHasStack()) {
+            return screen.inventorySlots.inventorySlots.indexOf(hovered);
         }
-        for (int i = 0; i < screen.getMenu().slots.size(); i++) {
-            Slot slot = screen.getMenu().slots.get(i);
-            int sx = screen.getGuiLeft() + slot.x;
-            int sy = screen.getGuiTop() + slot.y;
-            if (inside(mouseX, mouseY, sx, sy, SLOT_SIZE, SLOT_SIZE) && slot.hasItem()) {
+        for (int i = 0; i < screen.inventorySlots.inventorySlots.size(); i++) {
+            Slot slot = screen.inventorySlots.inventorySlots.get(i);
+            int sx = screen.getGuiLeft() + slot.xPos;
+            int sy = screen.getGuiTop() + slot.yPos;
+            if (inside(mouseX, mouseY, sx, sy, SLOT_SIZE, SLOT_SIZE) && slot.getHasStack()) {
                 return i;
             }
         }
         return -1;
     }
 
-    public static boolean tryImportHoveredMenuSlot(AbstractContainerScreen<?> screen, double mouseX, double mouseY, int button) {
+    public static boolean tryImportHoveredMenuSlot(GuiContainer screen, double mouseX, double mouseY, int button) {
         if (isLocalSophisticatedMenu(screen)) {
             return false;
         }
@@ -233,17 +239,17 @@ public final class OverlayInteraction {
         if (menuSlot < 0) {
             return false;
         }
-        if (menuSlot == 0 && button != GLFW.GLFW_MOUSE_BUTTON_LEFT) {
+        if (menuSlot == 0 && button != 0) {
             return true;
         }
         if (!canImportMenuSlot(screen, menuSlot)) {
             return false;
         }
-        PacketDistributor.sendToServer(new C2SRtsImportMenuSlotPayload(menuSlot));
+        RtsPayloadRegistrar.sendToServer(new C2SRtsImportMenuSlotPayload(menuSlot));
         return true;
     }
 
-    public static boolean tryStartShiftImportDrag(AbstractContainerScreen<?> screen, double mouseX, double mouseY) {
+    public static boolean tryStartShiftImportDrag(GuiContainer screen, double mouseX, double mouseY) {
         int menuSlot = resolveHoveredMenuSlot(screen, mouseX, mouseY);
         if (!canDragImportMenuSlot(screen, menuSlot)) {
             return false;
@@ -254,43 +260,43 @@ public final class OverlayInteraction {
         return trySendShiftImportDragSlot(screen, menuSlot);
     }
 
-    public static boolean tryContinueShiftImportDrag(AbstractContainerScreen<?> screen, double mouseX, double mouseY) {
+    public static boolean tryContinueShiftImportDrag(GuiContainer screen, double mouseX, double mouseY) {
         int menuSlot = resolveHoveredMenuSlot(screen, mouseX, mouseY);
         return trySendShiftImportDragSlot(screen, menuSlot);
     }
 
-    public static boolean trySendShiftImportDragSlot(AbstractContainerScreen<?> screen, int menuSlot) {
+    public static boolean trySendShiftImportDragSlot(GuiContainer screen, int menuSlot) {
         if (shiftImportDragSlots.contains(menuSlot) || !canDragImportMenuSlot(screen, menuSlot)) {
             return false;
         }
         shiftImportDragSlots.add(menuSlot);
-        PacketDistributor.sendToServer(new C2SRtsImportMenuSlotPayload(menuSlot));
+        RtsPayloadRegistrar.sendToServer(new C2SRtsImportMenuSlotPayload(menuSlot));
         return true;
     }
 
-    public static boolean canDragImportMenuSlot(AbstractContainerScreen<?> screen, int menuSlot) {
-        Minecraft minecraft = Minecraft.getInstance();
-        if (!canImportMenuSlot(screen, menuSlot) || minecraft.player == null || screen == null || screen.getMenu() == null) {
+    public static boolean canDragImportMenuSlot(GuiContainer screen, int menuSlot) {
+        Minecraft minecraft = Minecraft.getMinecraft();
+        if (!canImportMenuSlot(screen, menuSlot) || minecraft.player == null || screen == null || screen.inventorySlots == null) {
             return false;
         }
-        Slot slot = screen.getMenu().slots.get(menuSlot);
+        Slot slot = screen.inventorySlots.inventorySlots.get(menuSlot);
         return isPlayerInventorySlot(slot, minecraft.player);
     }
 
-    public static boolean canImportMenuSlot(AbstractContainerScreen<?> screen, int menuSlot) {
-        Minecraft minecraft = Minecraft.getInstance();
-        if (minecraft.player == null || screen == null || screen.getMenu() == null
-                || menuSlot < 0 || menuSlot >= screen.getMenu().slots.size()) {
+    public static boolean canImportMenuSlot(GuiContainer screen, int menuSlot) {
+        Minecraft minecraft = Minecraft.getMinecraft();
+        if (minecraft.player == null || screen == null || screen.inventorySlots == null
+                || menuSlot < 0 || menuSlot >= screen.inventorySlots.inventorySlots.size()) {
             return false;
         }
         if (isLocalSophisticatedMenu(screen)) {
             return false;
         }
-        Slot slot = screen.getMenu().slots.get(menuSlot);
-        if (slot == null || !slot.hasItem() || !slot.mayPickup(minecraft.player)) {
+        Slot slot = screen.inventorySlots.inventorySlots.get(menuSlot);
+        if (slot == null || !slot.getHasStack() || !slot.canTakeStack(minecraft.player)) {
             return false;
         }
-        return !isPlayerInventorySlot(slot, minecraft.player) || isInventoryOrCraftingScreen(screen);
+        return !isPlayerInventorySlot(slot, minecraft.player) || isInventoryOrGuiCrafting(screen);
     }
 
     public static void endShiftImportDrag() {
@@ -299,28 +305,28 @@ public final class OverlayInteraction {
         shiftImportDragSlots.clear();
     }
 
-    public static boolean isPlayerInventorySlot(Slot slot, net.minecraft.world.entity.player.Player player) {
-        return slot != null && player != null && slot.container == player.getInventory();
+    public static boolean isPlayerInventorySlot(Slot slot, net.minecraft.entity.player.EntityPlayer player) {
+        return slot != null && player != null && slot.inventory == player.inventory;
     }
 
-    public static boolean isInventoryOrCraftingScreen(Screen screen) {
-        return screen instanceof InventoryScreen || screen instanceof CraftingScreen;
+    public static boolean isInventoryOrGuiCrafting(GuiScreen screen) {
+        return screen instanceof GuiInventory || screen instanceof GuiCrafting;
     }
 
-    private static boolean isLocalSophisticatedMenu(AbstractContainerScreen<?> screen) {
-        Minecraft minecraft = Minecraft.getInstance();
+    private static boolean isLocalSophisticatedMenu(GuiContainer screen) {
+        Minecraft minecraft = Minecraft.getMinecraft();
         return minecraft.player != null
                 && screen != null
-                && RtsRemoteMenuCompat.isLocalSophisticatedMenu(screen.getMenu(), minecraft.player);
+                && RtsRemoteMenuCompat.isLocalSophisticatedMenu(screen.inventorySlots, minecraft.player);
     }
 
     // =========================================================================
     //  Quick-move overlay entry
     // =========================================================================
 
-    public static boolean tryQuickMoveOverlayEntry(AbstractContainerScreen<?> screen, double mouseX, double mouseY) {
-        Minecraft minecraft = Minecraft.getInstance();
-        if (minecraft.player == null || !minecraft.player.containerMenu.getCarried().isEmpty()) {
+    public static boolean tryQuickMoveOverlayEntry(GuiContainer screen, double mouseX, double mouseY) {
+        Minecraft minecraft = Minecraft.getMinecraft();
+        if (minecraft.player == null || !minecraft.player.inventory.getItemStack().isEmpty()) {
             return false;
         }
         OverlayLayoutHelper.OverlayLayout layout = OverlayLayoutHelper.resolveOverlayLayout(screen);
@@ -328,13 +334,13 @@ public final class OverlayInteraction {
         if (idx < 0 || idx >= ClientRtsController.get().getStorageEntries().size()) {
             return false;
         }
-        var entry = ClientRtsController.get().getStorageEntries().get(idx);
+        StorageEntry entry = ClientRtsController.get().getStorageEntries().get(idx);
         if (entry == null || entry.stack().isEmpty()) {
             return false;
         }
         ItemStack request = entry.stack().copy();
         request.setCount(1);
-        PacketDistributor.sendToServer(new C2SRtsLinkedQuickMovePayload(request));
+        RtsPayloadRegistrar.sendToServer(new C2SRtsLinkedQuickMovePayload(request));
         ClientRtsController.get().selectStorageEntry(idx);
         pendingOverlayCarriedItemId = "";
         return true;
@@ -344,17 +350,18 @@ public final class OverlayInteraction {
     //  Craft refill
     // =========================================================================
 
-    public static void capturePendingCraftRefill(AbstractContainerScreen<?> screen, double mouseX, double mouseY, int button) {
+    public static void capturePendingCraftRefill(GuiContainer screen, double mouseX, double mouseY, int button) {
         clearPendingCraftRefill();
-        if (screen == null || Screen.hasShiftDown()) {
+        if (screen == null || GuiScreen.isShiftKeyDown()) {
             return;
         }
-        if (button != GLFW.GLFW_MOUSE_BUTTON_LEFT && button != GLFW.GLFW_MOUSE_BUTTON_RIGHT) {
+        if (button != 0 && button != 1) {
             return;
         }
-        if (!(screen.getMenu() instanceof CraftingMenu menu)) {
+        if (!(screen.inventorySlots instanceof ContainerWorkbench)) {
             return;
         }
+        ContainerWorkbench menu = (ContainerWorkbench) screen.inventorySlots;
         int slotIndex = resolveHoveredMenuSlot(screen, mouseX, mouseY);
         if (slotIndex != 0) {
             return;
@@ -363,11 +370,11 @@ public final class OverlayInteraction {
         for (int i = 0; i < 9; i++) {
             Slot slot = menu.getSlot(1 + i);
             ItemStack stack = slot == null ? ItemStack.EMPTY : slot.getItem();
-            blueprint.add(stack.isEmpty() ? ItemStack.EMPTY : stack.copyWithCount(1));
+            blueprint.add(stack.isEmpty() ? ItemStack.EMPTY : copyOne(stack));
         }
         Slot resultSlot = menu.getSlot(0);
         ItemStack result = resultSlot == null ? ItemStack.EMPTY : resultSlot.getItem();
-        var resultId = result.isEmpty() ? null : BuiltInRegistries.ITEM.getKey(result.getItem());
+        ResourceLocation resultId = result.isEmpty() ? null : ForgeRegistries.ITEMS.getKey(result.getItem());
         pendingCraftRefillScreen = screen;
         pendingCraftRefillButton = button;
         pendingCraftRefillBlueprint = blueprint;
@@ -375,14 +382,14 @@ public final class OverlayInteraction {
         pendingCraftResultCount = result.isEmpty() ? 0 : result.getCount();
     }
 
-    public static void trySendPendingCraftRefill(Screen screen, int button) {
+    public static void trySendPendingCraftRefill(GuiScreen screen, int button) {
         if (pendingCraftRefillScreen != screen
                 || pendingCraftRefillButton != button
                 || pendingCraftRefillBlueprint.size() != 9) {
             clearPendingCraftRefill();
             return;
         }
-        PacketDistributor.sendToServer(new C2SRtsCraftRefillPayload(
+        RtsPayloadRegistrar.sendToServer(new C2SRtsCraftRefillPayload(
                 new ArrayList<>(pendingCraftRefillBlueprint),
                 pendingCraftResultItemId,
                 pendingCraftResultCount));
@@ -392,7 +399,7 @@ public final class OverlayInteraction {
     public static void clearPendingCraftRefill() {
         pendingCraftRefillScreen = null;
         pendingCraftRefillButton = -1;
-        pendingCraftRefillBlueprint = List.of();
+        pendingCraftRefillBlueprint = java.util.Collections.emptyList();
         pendingCraftResultItemId = "";
         pendingCraftResultCount = 0;
     }
@@ -448,29 +455,32 @@ public final class OverlayInteraction {
     //  Inventory RTS buttons
     // =========================================================================
 
-    public static void renderInventoryRtsButtons(net.minecraft.client.gui.GuiGraphics g, net.minecraft.client.gui.Font font, Screen screen, double mouseX, double mouseY) {
+    public static void renderInventoryRtsButtons(FontRenderer font, GuiScreen screen,
+            double mouseX, double mouseY) {
         if (!ClientRtsController.get().isProgressionEnabled()) {
             return;
         }
         OverlayLayoutHelper.ButtonLayout home = inventoryHomeButton(screen);
-        drawMiniButton(g, font, home.x(), home.y(), home.w(), home.h(),
-                Component.translatable("screen.rtsbuilding.inventory.home_button").getString());
+        Gui.drawRect(home.x(), home.y(), home.x() + home.w(), home.y() + home.h(), 0xCC303030);
+        String label = I18n.format("screen.rtsbuilding.inventory.home_button");
+        font.drawString(label, home.x() + Math.max(2, (home.w() - font.getStringWidth(label)) / 2),
+                home.y() + Math.max(1, (home.h() - font.FONT_HEIGHT) / 2), 0xFFFFFF, false);
     }
 
-    public static boolean handleInventoryRtsButtonClick(Screen screen, double mouseX, double mouseY) {
+    public static boolean handleInventoryRtsButtonClick(GuiScreen screen, double mouseX, double mouseY) {
         if (!ClientRtsController.get().isProgressionEnabled()) {
             return false;
         }
-        Minecraft minecraft = Minecraft.getInstance();
+        Minecraft minecraft = Minecraft.getMinecraft();
         OverlayLayoutHelper.ButtonLayout home = inventoryHomeButton(screen);
         if (inside(mouseX, mouseY, home.x(), home.y(), home.w(), home.h())) {
-            minecraft.setScreen(new RtsHomeScreen(screen));
+            minecraft.displayGuiScreen(new RtsHomeScreen(screen));
             return true;
         }
         return false;
     }
 
-    public static OverlayLayoutHelper.ButtonLayout inventoryHomeButton(Screen screen) {
+    public static OverlayLayoutHelper.ButtonLayout inventoryHomeButton(GuiScreen screen) {
         int x = Math.max(4, (screen.width - INVENTORY_RTS_BUTTON_W) / 2);
         int y = 4;
         return new OverlayLayoutHelper.ButtonLayout(x, y, INVENTORY_RTS_BUTTON_W, INVENTORY_RTS_BUTTON_H);
@@ -530,7 +540,7 @@ public final class OverlayInteraction {
         if (index < 0 || index >= ClientRtsController.get().getCraftableEntries().size()) {
             return true;
         }
-        var entry = ClientRtsController.get().getCraftableEntries().get(index);
+        CraftableEntry entry = ClientRtsController.get().getCraftableEntries().get(index);
         if (!entry.craftable()) {
             return true;
         }
@@ -563,17 +573,23 @@ public final class OverlayInteraction {
     }
 
     public static String storageCountDetail(ClientRtsController controller, long count) {
-        return net.minecraft.network.chat.Component.translatable(
-                controller.isStorageLinked()
+        return I18n.format(controller.isStorageLinked()
                         ? "screen.rtsbuilding.tooltip.count_storage"
                         : "screen.rtsbuilding.tooltip.count_inventory",
-                RtsClientUiUtil.compactCount(count)).getString();
+                RtsClientUiUtil.compactCount(count));
     }
 
     public static boolean isLeftMouseDown() {
-        Minecraft minecraft = Minecraft.getInstance();
-        return minecraft != null
-                && minecraft.getWindow() != null
-                && org.lwjgl.glfw.GLFW.glfwGetMouseButton(minecraft.getWindow().getWindow(), org.lwjgl.glfw.GLFW.GLFW_MOUSE_BUTTON_LEFT) == org.lwjgl.glfw.GLFW.GLFW_PRESS;
+        return Mouse.isButtonDown(0);
+    }
+
+    private static boolean sameItemAndTags(ItemStack left, ItemStack right) {
+        return ItemStack.areItemsEqual(left, right) && ItemStack.areItemStackTagsEqual(left, right);
+    }
+
+    private static ItemStack copyOne(ItemStack stack) {
+        ItemStack copy = stack.copy();
+        copy.setCount(1);
+        return copy;
     }
 }
